新增swagger配置，处理登录失效的问题
